# Neye

./: CMakeLists.txt  README.md  conanfile.txt  run_neye.sh
features/: feature_mapping.json
notes/: Comprehensive List of TCP Port Numbers and Their Protocols.md  Conception.md  Main Process.md  Stations.md  Switch confs.md  destination.md  laptop.md  phase one.md  phase three.md  phase two.md
resources/: groupdevicemap.json  groupdevicemap_.json
src/: logger.cpp  logger.hpp  main.cpp  neye_lib copy.cpp  neye_lib.cpp  neye_lib.hpp
